# 3d-display

./: .gitignore  CMakeLists.txt  README.md  cv.cpp  main.cpp  outline.md
include/: cv_actions.hpp  event_handlers.hpp  gtk_signal_data.hpp  interlacer.hpp  shared.hpp
src/: cv.cpp  cv_actions.cpp  event_handlers.cpp  interlacer.cpp  main.cpp  old_cv.cpp  shared.cpp  socket_test.py
ui/: main.blp  style.css
